// Copyright the Hyperledger Fabric contributors. All rights reserved.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

option java_package = "org.hyperledger.fabric.protos.peer";
option go_package = "github.com/hyperledger/fabric-protos-go/peer";

package protos;

import "peer/proposal.proto";
import "peer/proposal_response.proto";

service Endorser {
    rpc ProcessProposal(SignedProposal) returns (ProposalResponse);
}
